[gd_scene load_steps=11 format=3 uid="uid://bslk2iuphjrsb"]

[ext_resource type="Script" path="res://Player/player.gd" id="1_6rn5d"]
[ext_resource type="Texture2D" uid="uid://d8iegvpaqdv8" path="res://Art/testeMorcego.png" id="2_ruel2"]
[ext_resource type="AudioStream" uid="uid://c0ljunrdfyapm" path="res://Sounds/flap.mp3" id="3_ia8mi"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_866jr"]
radius = 13.0
height = 58.0

[sub_resource type="AtlasTexture" id="AtlasTexture_ntke1"]
atlas = ExtResource("2_ruel2")
region = Rect2(0, 0, 361, 361)

[sub_resource type="AtlasTexture" id="AtlasTexture_kx4tp"]
atlas = ExtResource("2_ruel2")
region = Rect2(722, 361, 361, 361)

[sub_resource type="AtlasTexture" id="AtlasTexture_m0us0"]
atlas = ExtResource("2_ruel2")
region = Rect2(361, 361, 361, 361)

[sub_resource type="AtlasTexture" id="AtlasTexture_cemdl"]
atlas = ExtResource("2_ruel2")
region = Rect2(722, 361, 361, 361)

[sub_resource type="AtlasTexture" id="AtlasTexture_cfmne"]
atlas = ExtResource("2_ruel2")
region = Rect2(0, 0, 361, 361)

[sub_resource type="SpriteFrames" id="SpriteFrames_5v6ta"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ntke1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kx4tp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_m0us0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_m0us0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cemdl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cfmne")
}],
"loop": true,
"name": &"flap",
"speed": 20.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ntke1")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}]

[node name="PlayerBody" type="RigidBody2D"]
collision_layer = 2
gravity_scale = 2.3
contact_monitor = true
max_contacts_reported = 1
script = ExtResource("1_6rn5d")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
rotation = 1.5708
shape = SubResource("CapsuleShape2D_866jr")

[node name="PlayerSprite" type="AnimatedSprite2D" parent="."]
texture_filter = 4
position = Vector2(9, 0)
scale = Vector2(0.4, 0.4)
sprite_frames = SubResource("SpriteFrames_5v6ta")
animation = &"flap"

[node name="FlapSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_ia8mi")
max_polyphony = 15

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="animation_looped" from="PlayerSprite" to="." method="_on_player_sprite_animation_looped"]
